ShardLocal::runCommand variants should parse writeConcernError even when the command failed

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.14
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2016-09-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It is completely valid for commands to both fail and also have a write concern error. ShardRemote already handles this correctly, ShardLocal needs to be updated to behave the same as ShardRemote.

      This leads to the following weird error appearing on config servers:

      2016-09-01T17:09:00.740-0400 I SHARDING [conn21] couldn't create config.changelog collection: :: caused by :: InternalError: Invalid to check for write concern error if command failed
      

            Assignee:
            Spencer Brody (Inactive)
            Reporter:
            Spencer Brody (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: